fix syntax 21 code
Signed-off-by: xinyual <xinyual@amazon.com>